# ZhiNengShouYinXiTong

./: README.md  openmv.py
RT_zhinengshouyinxitong/: .config  .cproject  .project  Kconfig  rtconfig.h
RT_zhinengshouyinxitong/applications/: CRC8_CRC16.h  MFRC522.c  MFRC522.h  MFR_app.c  MFR_app.h  led_control.c  led_control.h  main.c  oled.c  oled.h  oled_font.h  openmv_uart.c  openmv_uart.h  packet.c  packet.h  qr_scanner_app.c  qr_scanner_app.h  usb_app.c
RT_zhinengshouyinxitong/cubemx/: .mxproject  cubemx.ioc
RT_zhinengshouyinxitong/cubemx/MDK-ARM/: cubemx.uvoptx  cubemx.uvprojx
RT_zhinengshouyinxitong/cubemx/Src/: main.c  tim.c
RT_zhinengshouyinxitong/drivers/: board.c  board.h  drv_pwm.c
rtthread_shangweiji/: CMakeLists.txt  card_id.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
rtthread_shangweiji/Core/inc/: EventBus.h  EventBus.moc  serial_pack.h
rtthread_shangweiji/Core/src/: EventBus.cpp  serial_pack.cpp
rtthread_shangweiji/my_ui/: card_id.cpp  card_id.h  card_id.ui  charge.cpp  charge.h  charge.ui  serialport.cpp  serialport.h  serialport.ui
